<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.HomeActivity" android:id="@+id/constraintLayout2">

        <androidx.appcompat.widget.Toolbar
                android:layout_width="0dp"
                android:layout_height="66dp"
                android:background="@android:color/background_light"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize" android:id="@+id/homeToolbar"
                android:elevation="4dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" tools:layout_editor_absoluteX="16dp"
                    android:id="@+id/toolbarLy">
                <TextView
                        android:text="@string/label_guia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/guiaTv" android:layout_weight="1"
                        android:textColor="@color/colorText"
                        app:layout_constraintEnd_toStartOf="@+id/verticalLine"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintVertical_bias="0.17" android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp" android:ellipsize="marquee" android:clickable="true"
                        android:focusable="true"/>
                <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            android:id="@+id/guideline2"
                                                            android:orientation="vertical"
                                                            app:layout_constraintGuide_begin="79dp"/>
                <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" android:layout_margin="8dp"
                        android:id="@+id/verticalLine"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.687"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:id="@+id/tittleLy"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintVertical_bias="0.448"
                        app:layout_constraintStart_toEndOf="@+id/verticalLine" android:layout_marginStart="8dp">
                    <TextView
                            android:text="@string/label_ciudades"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/CiudadesTv"
                            android:textColor="@color/colorText" android:textStyle="bold"/>
                    <TextView
                            android:text="@string/label_humanidad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/humanidadTv"
                            android:textColor="@color/colorText" android:textStyle="bold" android:ellipsize="marquee"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp" android:id="@+id/homeFragment"
                android:background="@android:color/holo_orange_light"
                app:layout_constraintTop_toBottomOf="@+id/homeToolbar" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
                android:orientation="vertical"
        >


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp" android:id="@+id/subtitle"
                    android:background="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
            >


                <TextView
                        android:text="@string/subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView"
                        android:textColor="@android:color/white" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:textSize="20sp"
                        android:gravity="center"
                />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/imageAvila"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@drawable/img_inicio_avila"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/imageValledolid" android:scaleType="fitCenter"/>
                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:id="@+id/imageValledolid"
                        android:background="@drawable/img_inicio_valladolid2"
                        app:layout_constraintTop_toBottomOf="@+id/imageAvila"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:scaleType="fitCenter"/>
                <ImageView
                        android:layout_width="124dp"
                        android:layout_height="96dp" app:srcCompat="@drawable/img_banner_av"
                        android:id="@+id/img_banner_av" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="27dp" android:layout_marginBottom="34dp"
                        app:layout_constraintBottom_toTopOf="@+id/imageValledolid" android:visibility="gone"/>
                <ImageView
                        android:layout_width="124dp"
                        android:layout_height="96dp" app:srcCompat="@drawable/img_banner_va"
                        android:id="@+id/img_banner_va" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="34dp" app:layout_constraintTop_toTopOf="@+id/imageValledolid"
                        android:visibility="gone"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>