<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/scrollView2">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context=".fragments.RouteFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="64dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/constraintRutaTitle">

            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/guideline"
                                                        android:orientation="vertical"
                                                        app:layout_constraintGuide_percent="0.1"/>
            <ImageView
                    android:src="@drawable/ic_left_narrow"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/img_back"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline"
            />
            <TextView
                    android:text="Rutas"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/TextViewMonumentTitle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="@+id/guideline" android:textSize="25sp"
                    android:gravity="center_vertical"
                    app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView

                android:src="@drawable/img_avila_video"
                android:layout_width="0dp"
                android:layout_height="106dp"
                android:id="@+id/ImgMonumentVideo" android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@+id/constraintRutaTitle"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
                android:src="@drawable/ic_video_play"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:id="@+id/imageViewPlayVideoMonument"
                app:layout_constraintStart_toStartOf="@+id/ImgMonumentVideo"
                app:layout_constraintTop_toTopOf="@+id/ImgMonumentVideo"
                app:layout_constraintBottom_toBottomOf="@+id/ImgMonumentVideo"
                app:layout_constraintEnd_toEndOf="@+id/ImgMonumentVideo" android:layout_marginEnd="8dp"
                android:visibility="invisible"/>
        <ImageView
                android:src="@drawable/btn_comenzar"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonBeginRoute" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginTop="89dp" app:layout_constraintTop_toTopOf="@+id/ImgMonumentVideo"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintRuta"
                android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           tools:layout_editor_absoluteX="0dp"
                                                           app:layout_constraintTop_toBottomOf="@+id/ImgMonumentVideo">

            <TextView
                    android:text="@string/ruta_downavila"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@id/tvTitleRoute" android:textStyle="bold"
                    android:textSize="20sp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            />
            <TextView
                    android:text="30' a pie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textDuration"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleRoute"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
            <ImageView
                    android:src="@drawable/relog"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/imageView3"
                    app:layout_constraintStart_toEndOf="@+id/textDuration"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvTitleRoute"/>
            <TextView
                    android:text="@string/route_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textDescription" android:textSize="14sp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray" android:layout_margin="8dp"
                    android:id="@+id/verticalLine3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                  />




        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/ContraintMonumentosTitle"
                                                           android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           app:layout_constraintTop_toBottomOf="@+id/constraintRuta"

        >
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/guideline_photos"
                                                        android:orientation="vertical"
                                                        app:layout_constraintGuide_percent="0.86"/>
            <ImageView
                    android:src="@drawable/ic_left_narrow"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/img_right"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline_photos"
                    android:rotation="270"/>
            <TextView
                    android:text="@string/monuments"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/titleMonuments"
                    android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="25sp"
                    android:gravity="center_vertical"
                    android:textStyle="bold" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent"
                                                           app:layout_constraintTop_toBottomOf="@+id/ContraintMonumentosTitle"
                                                           android:id="@+id/constraintLayout9">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/TextViewMonumentTitle2"
                      android:text="@string/this_is_your_intinerary"
                      tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="32dp"/>

            <ListView android:id="@+id/listViewMonumentsPerRoute"
                      android:layout_width="0dp"
                      android:layout_height="200dp"
                      app:layout_constraintTop_toBottomOf="@+id/TextViewMonumentTitle2"
                      app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/TextViewMonumentTitle2"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/listViewMonumentsPerRoute"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"></androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="405dp"
                                                           android:layout_height="wrap_content"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           android:layout_marginStart="8dp"
                                                           app:layout_constraintTop_toBottomOf="@+id/constraintLayout9">
            <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp" app:srcCompat="@drawable/ic_circle"
                    android:id="@+id/imageView8" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"/>
            <ImageView
                    android:layout_width="37dp"
                    android:layout_height="13dp" app:srcCompat="@drawable/ic_finish"
                    android:id="@+id/imageView9" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView8" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="11dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>